--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "nanoid": "^4.0.2",
+    "nouislider": "^15.7.1",
+    "nouislider-react": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-markdown": "^8.0.7",
+    "react-onblur": "^2.0.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
+    "react-slider": "^2.0.6",
     "sort-by": "^1.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -58,6 +62,7 @@
     "@babel/eslint-parser": "^7.22.10",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.22.10",
+    "@types/react-slider": "^1.3.1",
     "babel-loader": "^9.1.3",
     "eslint": "^8.47.0",
     "eslint-config-airbnb": "^19.0.4",
