--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@types/react-dom": "^18.2.7",
     "antd": "^5.8.5",
     "date-fns": "^2.30.0",
+    "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "nanoid": "^4.0.2",
     "nouislider": "^15.7.1",
     "nouislider-react": "^3.4.1",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.4",
+    "react-hook-form": "^7.46.1",
     "react-markdown": "^8.0.7",
     "react-onblur": "^2.0.1",
     "react-redux": "^8.1.2",
@@ -62,6 +64,7 @@
     "@babel/eslint-parser": "^7.22.10",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.22.10",
+    "@types/js-cookie": "^3.0.3",
     "@types/react-slider": "^1.3.1",
     "babel-loader": "^9.1.3",
     "eslint": "^8.47.0",
