--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "blog-app",
+  "name": "okami-anime",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
@@ -11,12 +12,11 @@
     "@types/node": "^16.18.40",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.4",
     "antd": "^5.8.5",
     "date-fns": "^2.30.0",
     "js-cookie": "^3.0.5",
-    "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
-    "nanoid": "^4.0.2",
     "nouislider": "^15.7.1",
     "nouislider-react": "^3.4.1",
     "react": "^18.2.0",
@@ -33,11 +33,15 @@
     "sass": "^1.67.0",
     "sort-by": "^1.2.0",
     "typescript": "^4.9.5",
+    "vite": "^4.4.9",
+    "vite-plugin-html": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "preview": "vite preview",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "vite build",
+    "dev": "vite serve",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install"
