--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.46.1",
     "react-markdown": "^8.0.7",
     "react-onblur": "^2.0.1",
@@ -70,6 +71,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.22.10",
     "@types/js-cookie": "^3.0.3",
+    "@types/react-google-recaptcha": "^2.1.7",
     "@types/react-slider": "^1.3.1",
     "babel-loader": "^9.1.3",
     "eslint": "^8.47.0",
