--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
   },
   "scripts": {
     "preview": "vite preview",
-    "start": "react-scripts start",
-    "build": "vite build",
+    "start": "vite start",
+    "build": "vite build ",
     "dev": "vite serve",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
