--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.46.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-markdown": "^8.0.7",
     "react-onblur": "^2.0.1",
     "react-redux": "^8.1.2",
