--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.46.1",
     "react-loading-skeleton": "^3.3.1",
     "react-markdown": "^8.0.7",
