--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
     "react-slider": "^2.0.6",
+    "react-toastify": "^9.1.3",
     "sass": "^1.67.0",
     "sort-by": "^1.2.0",
     "typescript": "^4.9.5",
