--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.4",
     "antd": "^5.8.5",
+    "bbcode-to-react": "^0.2.9",
     "date-fns": "^2.30.0",
     "js-cookie": "^3.0.5",
     "match-sorter": "^6.3.1",
